--- a/index.html
+++ b/index.html
@@ -115,3 +115,4 @@
     <p>Залишайтеся на зв'язку з нами: <a href="mailto:eco.club@example.com">eco.club@example.com</a></p>
 </body>
 </html>
+<head>: <link rel="stylesheet" href="style.css">
