--- a/index.html
+++ b/index.html
@@ -4,74 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Еко-Клуб</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 20px;
-            background-color: #f4f9f4;
-            color: #333;
-        }
-        h1, h2 {
-            color: #2e7d32;
-        }
-        section {
-            margin-bottom: 20px;
-            padding: 15px;
-            background-color: #ffffff;
-            border: 1px solid #ddd;
-            border-radius: 8px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
-        .gallery {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 15px;
-        }
-        .gallery img {
-            width: 100%;
-            max-width: 300px;
-            margin: 10px 0;
-            border-radius: 8px;
-        }
-        ul {
-            list-style: circle inside;
-            padding-left: 20px;
-        }
-        form {
-            background-color: #e8f5e9;
-            padding: 15px;
-            border-radius: 8px;
-            max-width: 400px;
-        }
-        form label {
-            display: block;
-            margin-top: 10px;
-        }
-        form input, form textarea, form button {
-            width: 100%;
-            padding: 8px;
-            margin-top: 5px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-        }
-        form button {
-            background-color: #2e7d32;
-            color: white;
-            font-size: 16px;
-            cursor: pointer;
-        }
-        form button:hover {
-            background-color: #1b5e20;
-        }
-        a {
-            color: #2e7d32;
-            text-decoration: none;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Ласкаво просимо до Еко-Клубу!</h1>
@@ -115,4 +48,3 @@
     <p>Залишайтеся на зв'язку з нами: <a href="mailto:eco.club@example.com">eco.club@example.com</a></p>
 </body>
 </html>
-<head>: <link rel="stylesheet" href="style.css">
